--- a/week1/day1/pubspec.yaml
+++ b/week1/day1/pubspec.yaml
@@ -1,4 +1,4 @@
-name: secnnd
+name: main
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
@@ -8,7 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  path: ^1.8.0
 
 dev_dependencies:
   lints: ^5.0.0
